[project]
name = "porter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justica", email = "atsuronreplaced@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.32",
]
